KIC_Minikube_Setup/config/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    konghq.com/plugins: cors-plugin-dev, pre-kong-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /hello
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-service
            port:
              number: 5000
